--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 
 <head>
+        <title>English to Metric Unit Converter</title>
 </head>
 <style>
 
