--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-
+<meta property="og:title" content="English and Metric Converter" />
+<meta property="og:description" content="Use this simple web application to convert English and Metric units of measurement." />
+<meta property="og:image" content="https://i.postimg.cc/90nwbsy7/englishmetricappbackground.png" />
 <head>
         <title>English and Metric Unit Converter</title>
 </head>
